First round of changes

--- a/new/accessibility/keyboard-en.html
+++ b/new/accessibility/keyboard-en.html
@@ -5,8 +5,6 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -39,25 +37,25 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h2>
+          <h2 class="panel-title">Accessibility guide</h2>
         </div>
         <div class="list-group"><a class="list-group-item" href="forms-en.html">Forms<span class="wb-inv"> - Accessibility guide</span></a> <a class="list-group-item" href="links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
         <div class="list-group"><a class="list-group-item" href="../design/buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="../design/forms-en.html">Forms<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a><a class="list-group-item" href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html">Form validation<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html">Feedback form<span class="wb-inv"> - Design guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h2>
+          <h2 class="panel-title">Writing guide</h2>
         </div>
         <div class="list-group"><a class="list-group-item" href="../writing/principals-en.html#links">Links<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 class="page-header" id="description">Description</h2>
+      <h2 id="description">Description</h2>
       <p>The keyboard is typically the exclusive interface that assistive technologies use to interact with user controls on a web page. Pointer-specific functionality performed with a mouse such as pointing, clicking, and dragging is often not available to assistive technologies and cannot be relied upon.</p>
       <p><strong>User controls</strong> are elements that can perform an action (or "do something") such as <a href="links-en.html">links</a> and <a href="forms-en.html">form elements</a>.  They are common in many technologies including HTML, PDF, Flash, and Sliverlight.</p>
       <p>The following are the most common user controls in HTML:</p>
@@ -79,7 +77,7 @@
       </p>
     </div>
   </div>
-  <h2 class="page-header" id="fi">Focus and input</h2>
+  <h2 id="fi">Focus and input</h2>
   <div class="row">
     <div class="pull-right col-md-4">
       <div class="panel panel-default">
@@ -115,7 +113,7 @@
       </div>
     </div>
   </div>
-  <h2 class="page-header" id="js">Client side scripting (JavaScript)</h2>
+  <h2 id="js">Client side scripting (JavaScript)</h2>
   <div class="row">
     <div class="pull-right col-md-4">
       <div class="panel panel-default">
@@ -136,19 +134,19 @@
         <li><strong>Non Independent (Keyboard or Mouse Only):</strong> <code>onKeyDown</code>, <code>onKeyUp</code>, <code>onKeyPress</code>, <code>onMouseOver</code>, <code>onMouseOut</code>, and <code>onDblClick</code>.</li>
       </ul>
     </div>
-    <h2 class="page-header" id="tc">Other technologies</h2>
+    <h2 id="tc">Other technologies</h2>
     <p>When using technologies other than HTML as the primary format (such as PDF, Flash and Sliverlight), ensure that the WCAG 2.0 sufficient techniques applicable to those technologies are being used to ensure keyboard accessibility.</p>
     <ul>
       <li><a href="http://www.w3.org/TR/WCAG20-TECHS/pdf.html" rel="external">PDF Techniques</a></li>
       <li><a href="http://www.w3.org/TR/WCAG20-TECHS/flash.html" rel="external">Flash Techniques</a></li>
       <li><a href="http://www.w3.org/TR/WCAG20-TECHS/silverlight.html" rel="external">Sliverlight Techniques</a></li>
     </ul>
-    <h2 class="page-header" id="con"> Accessibility considerations</h2>
+    <h2 id="con"> Accessibility considerations</h2>
     <h3>Visual impairments</h3>
     <p>Screen readers typically work exclusively with the keyboard.  While most screen readers are compatible with a mouse, users with visual impairments are unable to use the pointing functionality of a mouse.</p>
     <h3>Mobility, dexterity and coordination impairments</h3>
     <p>Most assistive technologies that are used by users with mobility, dexterity and coordination impairments interface work exclusively with the keyboard.</p>
-    <h2 class="page-header" id="links">Related WCAG links</h2>
+    <h2 id="links">Related WCAG links</h2>
     <p>Web Content Accessibility Guidelines (WCAG) 2.0 Success Criterions:</p>
     <ul>
       <li><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/keyboard-operation-keyboard-operable.html" rel="external">2.1.1 Keyboard</a></li>
