First round of changes, attempt 2

--- a/new/accessibility/summary-en.html
+++ b/new/accessibility/summary-en.html
@@ -15,7 +15,7 @@
   <li>Summary of coding requirements</li>
 </ol>
 <h1>Summary of coding requirements <small>Accessibility guide</small></h1>
-<h2 id="clr"><a href="colour-en.html">Colour</a></h2>
+<h2 id="clr" class="page-header"><a href="colour-en.html">Colour</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
@@ -41,7 +41,7 @@
     </div>
   </div>
 </div>
-<h2 id="frm"><a href="forms-en.html">Forms</a></h2>
+<h2 id="frm" class="page-header"><a href="forms-en.html">Forms</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
@@ -95,7 +95,7 @@
     </div>
   </div>
 </div>
-<h2 id="hdg"><a href="headings-en.html">Headings and titles</a></h2>
+<h2 id="hdg" class="page-header"><a href="headings-en.html">Headings and titles</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
@@ -125,7 +125,7 @@
     </div>
   </div>
 </div>
-<h2 id="img"><a href="images-en.html">Images</a></h2>
+<h2 id="img" class="page-header"><a href="images-en.html">Images</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
@@ -154,7 +154,7 @@
     </div>
   </div>
 </div>
-<h2 id="kbcv"><a href="keyboard-en.html">Keyboard and user controls</a></h2>
+<h2 id="kbcv" class="page-header"><a href="keyboard-en.html">Keyboard and user controls</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
@@ -194,7 +194,7 @@
     </div>
   </div>
 </div>
-<h2 id="lin"><a href="links-en.html">Links</a></h2>
+<h2 id="lin" class="page-header"><a href="links-en.html">Links</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
@@ -234,7 +234,7 @@
     </div>
   </div>
 </div>
-<h2 id="qlg"><a href="quotations-en.html">Quotations and language</a></h2>
+<h2 id="qlg" class="page-header"><a href="quotations-en.html">Quotations and language</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
@@ -264,7 +264,7 @@
     </div>
   </div>
 </div>
-<h2 id="tbl"><a href="tables-en.html">Tables</a></h2>
+<h2 id="tbl" class="page-header"><a href="tables-en.html">Tables</a></h2>
 <div class="row">
   <div class="col-md-8">
     <ul class="list-unstyled">
