--- a/new/accessibility/index-en.html
+++ b/new/accessibility/index-en.html
@@ -5,6 +5,11 @@
 <title>Accessibility guide</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
+<style type="text/css">
+blockquote p {font-size:16px;}
+</style>
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -17,14 +22,14 @@
 <div class="row">
   <div class="col-md-8">
     <div class="row">
-      <div class="col-md-4"> <img src="../accessibility.jpg" alt=""  class="media-object img-responsive img-thumbnail mrgn-bttm-lg" /> </div>
-      <div class="col-md-8">
+      <div class="col-md-4 col-lg-3 visible-md visible-lg "> <span class="fa-stack fa-5x"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-wheelchair fa-stack-1x fa-inverse"></span></span> </div>
+      <div class="col-md-8 col-lg-9">
         <p>The accessibility guide provides content authors and webmasters with an understanding of how to create and code content so that is accessible to all users, regardless of ability or disability.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <p>Background: </p>
+        <h2>Background</h2>
         <ul>
           <li><a href="introduction-en.html">Introduction to WCAG 2.0</a></li>
           <li><a href="applicibility-en.html">Success Criteria Applicability</a></li>
@@ -32,7 +37,7 @@
         </ul>
       </div>
       <div class="col-md-6">
-        <p>Coding specifics:</p>
+        <h2>Coding details</h2>
         <ul>
           <li><a href="summary-en.html">Summary of coding requirements</a></li>
           <li><a href="colour-en.html">Colour</a></li>
@@ -48,7 +53,17 @@
     </div>
   </div>
   <div class="col-md-4">
-    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"> Design guide </a> <a href="../writing/index-en.html" class="list-group-item">Writing guide</a> <a href="../usability/index-en.html" class="list-group-item">Usability guide</a> <a href="index-en.html" class="list-group-item active">Accessibility guide</a></div>
+    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"><span class="fa fa-code text-muted"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item active"><span class="fa fa-wheelchair fa-inverse"></span> Accessibility guide</a></div>
+    <blockquote>
+      <p>The most important blind visitor to your website is Google! In the same way that creating accessible web pages helps disabled person access your content, it also helps Google index your pages so that the right people can find your service or product.</p>
+      <p class="text-right">-Jim Byrne<br>
+        Founder of <a href="http://www.gawds.org/">Guild of Accessible Web Designers</a></p>
+    </blockquote>
+    <blockquote>
+      <p>The term accessibility can be understood to mean accommodating characteristics a person cannot change.</p>
+      <p class="text-right">   -Joe Clark<br>
+        Author of <a href="http://joeclark.org/book/?ALA"><em>Building Accessible Websites</em></a></p>
+    </blockquote>
   </div>
 </div>
 </body>
