--- a/new/accessibility/introduction-en.html
+++ b/new/accessibility/introduction-en.html
@@ -29,7 +29,7 @@
     </div>
   </div>
 </div>
-<h2 id="ov">Overview</h2>
+<h2 id="ov" class="page-header">Overview</h2>
 <div class="row">
   <div class="col-md-6">
     <p>The <a href="http://www.w3.org/TR/WCAG20/" rel="external"><em>Web Content Accessibility Guidelines (WCAG) 2.0</em></a> are a set of guidelines maintained by the <a href="http://www.w3.org" rel="external"><em>World Wide Web Consortium (W3C)</em></a> for making <a href="http://www.w3.org/TR/WCAG20/#contentdef" rel="external">content</a>  more accessible to people with disabilities</p>
@@ -44,7 +44,7 @@
     </div>
   </div>
 </div>
-<h2 id="cfrm">Conformance Requirements</h2>
+<h2 id="cfrm" class="page-header">Conformance Requirements</h2>
 <p>To ensure content is accessible to the widest possible audience, Government of Canada web pages must meet all five <a href="http://www.w3.org/TR/WCAG20/#conformance-reqs" rel="external">WCAG 2.0 conformance requirements</a> under the <em><a href="http://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=23601&amp;section=text#sec6.1" rel="external">Standard on Web Accessibility</a></em>. Web pages satisfy conformance requirements by using the <a href="http://wet-boew.github.io/wet-boew/demos/wamethod/wamethod-en.html">thirty-eight (38) success criteria</a> listed at the A and AA levels of WCAG 2.0.</p>
 <div class="row">
   <div class="col-md-6">
@@ -146,7 +146,7 @@
     </div>
   </div>
 </div>
-<h2 id="links">Related Links</h2>
+<h2 id="links" class="page-header">Related Links</h2>
 <ul class="list-unstyled">
   <li>Web Accessibility
     <ul>
