Changes to accessibility guide.

--- a/new/accessibility/introduction-en.html
+++ b/new/accessibility/introduction-en.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Untitled Document</title>
+<title>Introduction to WCAG 2.0 accessibility guide</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
   <li><a href="http://wet-boew.github.io/v4.0-ci/demos/index-en.html">Home</a></li>
-  <li><a href="https://github.com/wet-boew/wet-boew/wiki/Implementing-WET">Implement WET </a></li>
-  <li><a href="../index-en.html">Style guide </a></li>
-  <li><a href="index-en.html">Accessibility guide </a></li>
-  <li>WCAG 2.0 Success Criteria Applicability</li>
+  <li><a href="https://github.com/wet-boew/wet-boew/wiki/Implementing-WET">Implement WET</a></li>
+  <li><a href="../index-en.html">Style guide</a></li>
+  <li><a href="index-en.html">Accessibility guide</a></li>
+  <li>Introduction to WCAG 2.0</li>
 </ol>
 <h1>Introduction To WCAG 2.0 <small>Accessibility guide</small></h1>
 <div class="row">
@@ -25,17 +23,17 @@
       </div>
       <ul class="mrgn-tp-md">
         <li><a href="#ov">Overview</a></li>
-        <li><a href="#cfrm">Conformance Requirements</a></li>
-        <li><a href="#links">Related Links</a></li>
+        <li><a href="#cfrm">Conformance requirements</a></li>
+        <li><a href="#links">Related links</a></li>
       </ul>
     </div>
   </div>
 </div>
-<h2 class="page-header" id="ov">Overview</h2>
+<h2 id="ov" class="page-header">Overview</h2>
 <div class="row">
   <div class="col-md-6">
-    <p>The <a href="http://www.w3.org/TR/WCAG20/" rel="external"><em>Web Content Accessibility Guidelines (WCAG) 2.0</em></a> are a set of guidelines for making <a href="http://www.w3.org/TR/WCAG20/#contentdef" rel="external">content</a> implemented through <a href="http://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=23601&amp;section=text#technology" rel="external">web content technology</a> and accessed by <a href="http://www.w3.org/TR/WCAG20/#useragentdef" rel="external">user agents</a> and assistive technologies more accessible to people with disabilities.</p>
-    <p>The guidelines are maintained by the <a href="http://www.w3.org" rel="external"><em>World Wide Web Consortium (W3C)</em></a>, the primary international standards organization for the World Wide Web.</p>
+    <p>The <a href="http://www.w3.org/TR/WCAG20/" rel="external"><em>Web Content Accessibility Guidelines (WCAG) 2.0</em></a> are a set of guidelines maintained by the <a href="http://www.w3.org" rel="external"><em>World Wide Web Consortium (W3C)</em></a> for making <a href="http://www.w3.org/TR/WCAG20/#contentdef" rel="external">content</a>  more accessible to people with disabilities</p>
+    <p>Web content is implemented through <a href="http://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=23601&amp;section=text#technology" rel="external">web content technologies</a> and accessed using <a href="http://www.w3.org/TR/WCAG20/#useragentdef" rel="external">user agents</a> (with or without assistive technologies).  </p>
   </div>
   <div class="col-md-6">
     <div class="alert alert-info">
@@ -46,15 +44,15 @@
     </div>
   </div>
 </div>
-<h2 class="page-header" id="cfrm">Conformance Requirements</h2>
+<h2 id="cfrm" class="page-header">Conformance requirements</h2>
 <p>To ensure content is accessible to the widest possible audience, Government of Canada web pages must meet all five <a href="http://www.w3.org/TR/WCAG20/#conformance-reqs" rel="external">WCAG 2.0 conformance requirements</a> under the <em><a href="http://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=23601&amp;section=text#sec6.1" rel="external">Standard on Web Accessibility</a></em>. Web pages satisfy conformance requirements by using the <a href="http://wet-boew.github.io/wet-boew/demos/wamethod/wamethod-en.html">thirty-eight (38) success criteria</a> listed at the A and AA levels of WCAG 2.0.</p>
 <div class="row">
   <div class="col-md-6">
-    <h3>Applicable Success Criteria</h3>
+    <h3>Applicable success criteria</h3>
     <p>Success criteria are general statements, independent of technology, that need to be satisfied for content to claim conformance to WCAG 2.0.</p>
     <p>Depending on the type of content on a web page, individual success criterion may apply to all, some, or none of the content.</p>
     <div class="alert alert-warning">
-      <p>For assistance determining what content is applicable to a success criterion, consult the <a href="applicibility-en.html">WCAG 2.0 Success Criteria Applicability</a>.</p>
+      <p>For assistance determining what content is applicable to a success criterion, consult the <a href="applicability-en.html">WCAG 2.0 Success Criteria Applicability</a>.</p>
     </div>
   </div>
   <div class="col-md-6">
@@ -67,8 +65,8 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-    <h3>Satisfying A Success Criterion</h3>
-    <p>A success criterion is satisfied by:</p>
+    <h3>Satisfying success criteria</h3>
+    <p>Success criteria are satisfied by:</p>
     <ul>
       <li>
         <p>Avoiding all common failures; and</p>
@@ -80,7 +78,7 @@
     <p>The step by step process to satisfy a success criterion follows:</p>
     <ol>
       <li>
-        <p>For each <a href="http://wet-boew.github.io/wet-boew/demos/wamethod/wamethod-en.html" rel="external">success criterion</a>, identify the <a href="applicibility-en.html">applicable  items of content</a> on the web page.</p>
+        <p>For each <a href="http://wet-boew.github.io/wet-boew/demos/wamethod/wamethod-en.html" rel="external">success criterion</a>, identify the <a href="applicability-en.html">applicable  items of content</a> on the web page.</p>
       </li>
       <li>
         <p>For each occurrence of an applicable item of content:</p>
@@ -132,7 +130,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-    <h3>When A Success Criterion Cannot Be Satisfied</h3>
+    <h3>When a success criterion cannot be satisfied</h3>
     <p>When an item of content cannot satisfy all applicable success criteria using a desired web content technology, an alternate version of the item in another web content technology that does satisfy all applicable success criteria must be provided.</p>
     <p>The original version does not need to be removed as long as it does not interfere with a user's ability to easily locate and access the alternate version and use the web page.  The original version must also not present any additional information and/or functionality which is not found in the alternate version.</p>
     <div class="alert alert-danger">
@@ -148,7 +146,7 @@
     </div>
   </div>
 </div>
-<h2 class="page-header" id="links">Related Links</h2>
+<h2 id="links" class="page-header">Related links</h2>
 <ul class="list-unstyled">
   <li>Web Accessibility
     <ul>
@@ -179,7 +177,7 @@
   <li> Technologies
     <ul>
       <li><a href="http://www.w3.org/WAI/intro/aria" rel="external">Accessible Rich Internet Applications (WAI-ARIA)</a></li>
-      <li><a href="http://www.w3.org/TR/xhtml1/" rel="external">XHTML 1.0</a></li>
+      <li><a href="http://www.w3.org/TR/html5/" rel="external">HTML5</a></li>
     </ul>
   </li>
   <li>Legislation and Policies
