--- a/new/accessibility/index-en.html
+++ b/new/accessibility/index-en.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Untitled Document</title>
+<title>Accessibility guide</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -28,26 +28,14 @@ blockquote p {font-size:16px;}
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-12">
         <h2>Background</h2>
         <ul>
+          <li><a href="guide-en.html">Requirements guide</a></li>
+          <li><a href="examples-en.html">Coding examples</a></li>
           <li><a href="introduction-en.html">Introduction to WCAG 2.0</a></li>
-          <li><a href="applicibility-en.html">Success Criteria Applicability</a></li>
-          <li><a href="population-en.html">Accessibility and the Canadian population </a></li>
-        </ul>
-      </div>
-      <div class="col-md-6">
-        <h2>Coding details</h2>
-        <ul>
-          <li><a href="summary-en.html">Summary of coding requirements</a></li>
-          <li><a href="colour-en.html">Colour</a></li>
-          <li><a href="forms-en.html">Forms</a></li>
-          <li><a href="headings-en.html">Headings and titles</a></li>
-          <li><a href="images-en.html">Images</a></li>
-          <li><a href="keyboard-en.html">Keyboard and user controls</a></li>
-          <li><a href="links-en.html">Links</a></li>
-          <li><a href="quotations-en.html">Quotations and language</a></li>
-          <li><a href="tables-en.html">Tables</a></li>
+          <li><a href="considerations-en.html">Considerations</a></li>
+          <li><a href="applicability-en.html">Success criteria applicability</a></li>
         </ul>
       </div>
     </div>
@@ -57,12 +45,12 @@ blockquote p {font-size:16px;}
     <blockquote>
       <p>The most important blind visitor to your website is Google! In the same way that creating accessible web pages helps disabled person access your content, it also helps Google index your pages so that the right people can find your service or product.</p>
       <p class="text-right">-Jim Byrne<br>
-        Founder of <a href="http://www.gawds.org/">Guild of Accessible Web Designers</a></p>
+        Founder of <a href="http://www.gawds.org/">Guild of Accessible Web Designers</a></p>
     </blockquote>
     <blockquote>
       <p>The term accessibility can be understood to mean accommodating characteristics a person cannot change.</p>
-      <p class="text-right">   -Joe Clark<br>
-        Author of <a href="http://joeclark.org/book/?ALA"><em>Building Accessible Websites</em></a></p>
+      <p class="text-right">   -Joe Clark<br>
+        Author of <a href="http://joeclark.org/book/?ALA"><em>Building Accessible Websites</em></a></p>
     </blockquote>
   </div>
 </div>
