--- a/new/design/labels-en.html
+++ b/new/design/labels-en.html
@@ -35,7 +35,7 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="badges-en.html" class="list-group-item">Badges<span class="wb-inv"> - Design guide</span></a> <a href="colour-en.html" class="list-group-item">Colour<span class="wb-inv"> - Design guide</span></a></div>
       </div>
