--- a/new/design/proximity-en.html
+++ b/new/design/proximity-en.html
@@ -39,7 +39,7 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="position-en.html" class="list-group-item">Absolute positioning<span class="wb-inv"> - Design guide </span></a> <a href="grids-en.html#reflow" class="list-group-item">Grids:  Reflowing content around grids<span class="wb-inv"> - Design guide </span></a></div>
       </div>
