--- a/new/design/sizing-en.html
+++ b/new/design/sizing-en.html
@@ -36,7 +36,7 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="forms-en.html" class="list-group-item">Forms<span class="wb-inv"> - Design guide</span></a> <a href="pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a> <a href="tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a> <a href="wells-en.html" class="list-group-item">Wells<span class="wb-inv"> - Design guide</span></a></div>
       </div>
