--- a/new/writing/formatting-en.html
+++ b/new/writing/formatting-en.html
@@ -319,7 +319,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2  class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2  class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="../design/blockquotes-en.html" class="list-group-item">Blockquotes<span class="wb-inv"><span class="wb-inv"> - Design guide</span></span></a></div>
       </div>
@@ -847,7 +847,7 @@
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h3>
+          <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h3>
         </div>
         <div class="list-group"><a href="../design/headings-en.html" class="list-group-item">Headings<span class="wb-inv"> - Design guide</span></a></div>
       </div>
@@ -1139,7 +1139,7 @@
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h3>
+          <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h3>
         </div>
         <div class="list-group"><a href="../design/lists-en.html" class="list-group-item">Lists<span class="wb-inv"> - Design guide</span></a> <a href="../design/listgroup-en.html" class="list-group-item">List group<span class="wb-inv"> - Design guide</span></a> <a href="../design/pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a></div>
       </div>
@@ -1202,7 +1202,7 @@
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h3>
+          <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h3>
         </div>
         <div class="list-group"><a href="../design/links-en.html" class="list-group-item">Links<span class="wb-inv"> - Design guide</span></a></div>
       </div>
