--- a/new/writing/principals-en.html
+++ b/new/writing/principals-en.html
@@ -543,7 +543,7 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
+        <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/headings-en.html" class="list-group-item">Headings<span class="wb-inv"> - Design guide</span></a></div>
     </div>
@@ -610,7 +610,7 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
+        <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/lists-en.html" class="list-group-item">Lists<span class="wb-inv"> - Design guide</span></a> <a href="../design/listgroup-en.html" class="list-group-item">List group<span class="wb-inv"> - Design guide</span></a> <a href="../design/pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a></div>
     </div>
@@ -642,7 +642,7 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
+        <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/links-en.html" class="list-group-item">Links<span class="wb-inv"> - Design guide</span></a></div>
     </div>
@@ -672,7 +672,7 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
+        <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/images-en.html" class="list-group-item">Images<span class="wb-inv"> - Design guide</span></a> <a href="../design/icons-en.html" class="list-group-item">Icons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox<span class="wb-inv"> - Design guide</span></a></div>
     </div>
@@ -714,7 +714,7 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
+        <h3 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html" class="list-group-item">Tables plug-in<span class="wb-inv"> - Design guide</span></a></div>
     </div>
