--- a/new/design/code-en.html
+++ b/new/design/code-en.html
@@ -35,7 +35,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="http://wet-boew.github.io/v4.0-ci/demos/prettify/prettify-en.html" class="list-group-item">Prettify code <span class="wb-inv">- Design guide </span></a></div>
       </div>
