--- a/new/design/floats-en.html
+++ b/new/design/floats-en.html
@@ -36,7 +36,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="alignment-en.html" class="list-group-item">Alignment<span class="wb-inv"> - Design guide</span></a> <a href="grids-en.html#reflow" class="list-group-item">Grids:  Reflowing content around grids<span class="wb-inv"> - Design guide </span></a></div>
       </div>
