--- a/new/design/listgroup-en.html
+++ b/new/design/listgroup-en.html
@@ -38,7 +38,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="badges-en.html" class="list-group-item">Badges<span class="wb-inv"> - Design guide</span></a> <a href="pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a></div>
       </div>
