--- a/new/design/lists-en.html
+++ b/new/design/lists-en.html
@@ -43,7 +43,7 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="listgroup-en.html" class="list-group-item">List group <span class="wb-inv">- Design guide</span></a> <a href="pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a></div>
       </div>
