--- a/new/design/opacity-en.html
+++ b/new/design/opacity-en.html
@@ -36,7 +36,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="position-en.html" class="list-group-item">Absolute positioning<span class="wb-inv"> - Design guide</span></a></div>
       </div>
