--- a/new/design/pills-en.html
+++ b/new/design/pills-en.html
@@ -39,7 +39,7 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a class="list-group-item" href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></div>
       </div>
