--- a/new/design/position-en.html
+++ b/new/design/position-en.html
@@ -36,7 +36,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="grids-en.html" class="list-group-item">Grids<span class="wb-inv"> - Design guide</span></a> <a href="proximity-en.html" class="list-group-item">Margin proxmity<span class="wb-inv"> - Design guide</span></a> <a href="images-en.html" class="list-group-item">Images<span class="wb-inv"> - Design guide</span></a> <a href="opacity-en.html" class="list-group-item">Opacity<span class="wb-inv"> - Design guide</span></a></div>
       </div>
