--- a/new/usability/index-en.html
+++ b/new/usability/index-en.html
@@ -30,7 +30,7 @@ blockquote p {font-size:16px;}
     </div>
   </div>
   <div class="col-md-4">
-    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"><span class="fa fa-code text-muted"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item active"><span class="fa fa-smile-o fa-inverse"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
+    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"><span class="fa fa-picture-o text-muted"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item active"><span class="fa fa-smile-o fa-inverse"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
     <blockquote>
       <p>Quote here</p>
       <p class="text-right">-Name</a></p>
