Fixed spelling mistake on icon page
Fixed spelling mistake on icon page

--- a/new/design/icons-en.html
+++ b/new/design/icons-en.html
@@ -88,7 +88,7 @@
   </div>
 </div>
 <h2 class="page-header" id="description">Description</h2>
-<p>Too icon sets are, Glyphicons and Font Awesome, are featured below. The icons are glyphs, which means that they are picture-based fonts, similar to wingdings.  However, unlike a traditional font, they serve only decorative purposes.  Therefore, real text must accompany the icon to ensure accessibility requirements are met.  That text can be visible or invisible, but must be present.</p>
+<p>Two icon sets, Glyphicons and Font Awesome, are featured below. The icons are glyphs, which means that they are picture-based fonts, similar to wingdings.  However, unlike a traditional font, they serve only decorative purposes.  Therefore, real text must accompany the icon to ensure accessibility requirements are met.  That text can be visible or invisible, but must be present.</p>
 <h3>Glyphicons</h3>
 <p> 200 glyphs in font format from the Glyphicon Halflings set. <a href="http://glyphicons.com/">Glyphicons</a> Halflings are normally not available for free, but their creator has made them available for Bootstrap free of cost. This has been added to the core build of WET. </p>
 <h3>Font Awesome</h3>
