--- a/old/default-en.html
+++ b/old/default-en.html
@@ -67,7 +67,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <nav role="navigation">
 <div id="wet-psnb"><h2>Site menu</h2><div id="wet-psnb-in"><div class="wet-boew-menubar mb-mega"><div>
-<ul class="mb-menu" data-ajax-replace="../includes/projectmenu-en.txt">
+<ul class="mb-menu" data-ajax-replace="includes/projectmenu-en.txt">
 <li><div><a href="http://wet-boew.github.io/wet-boew/index-en.html">WET project</a></div></li>
 <li><div><a href="https://github.com/wet-boew/wet-boew/wiki/Implementing-WET">Implement WET</a></div></li>
 <li><div><a href="https://github.com/wet-boew/wet-boew/wiki/Contributor-guidelines">Contribute to WET</a></div></li>
@@ -154,7 +154,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <form action="#" method="post">
 <div><label for="data1">Form input default appearance:</label> <input name="data1" type="text" id="data1" /></div>
 <div><label for="data2">Form text area default appearance:</label> <textarea name="data2" cols="15" rows="3" id="data2"></textarea></div>
-<div><label for="data4">Form <code>select</code> default appearance:</label> 
+<div><label for="data4">Form <code>select</code> default appearance:</label>
 <select id="data4" name="data4">
 <option value="Option 1">Option 1</option>
 <option value="Option 2">Option 2</option>
